# enum_variant_type

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.tpl  appveyor.yml  rustfmt.toml  tarpaulin.toml
.github/workflows/: ci.yml
scripts/: coverage.sh
src/: lib.rs
tests/: basic.rs
