[package]
name = "enum_variant_type"
version = "0.2.1"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"
description = "Generates types for each enum variant and conversion trait impls."
repository = "https://github.com/azriel91/enum_variant_type"
documentation = "https://docs.rs/enum_variant_type/"
readme = "README.md"
keywords = ["enum", "variant", "type"]
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
proc_macro_roids = "0.7.0"
quote = "1.0.9"
syn = { version = "1.0.69", features = ["extra-traits", "visit"] }

[dev-dependencies]
pretty_assertions = "0.6.1"

[badges]
appveyor = { repository = "azriel91/enum_variant_type" }
travis-ci = { repository = "azriel91/enum_variant_type" }
codecov = { repository = "azriel91/enum_variant_type" }
