[package]
name = "enum_variant_type"
version = "0.4.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"
description = "Generates types for each enum variant and conversion trait impls."
repository = "https://github.com/azriel91/enum_variant_type"
documentation = "https://docs.rs/enum_variant_type/"
readme = "README.md"
keywords = ["enum", "variant", "type"]
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
proc_macro_roids = "0.8.0"
quote = "1.0.44"
syn = { version = "2.0.117", features = ["extra-traits", "visit"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
